# Azumy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.sh  utils.py
.github/workflows/: tests.yml
frontend/: crop.js  find.js  gallery.html  index.html  main.js  map.js  process.js  progress.js  retrieve.js  styles.css  websocket.js
frontend/js/: config.js  crop.js  find.js  main.js  map.js  process.js  progress.js  retrieve.js  terminal.js  websocket.js
frontend/js/gallery/: api.js  gallery.js  lightbox.js  render.js
frontend/styles/: gallery.css  main.css
routers/: crop.py  find.py  process.py  retrieve.py  workspace.py
tests/: conftest.py  test_crop.py  test_find.py  test_process.py  test_retrieve.py  test_utils.py  test_workspace.py
