[project]
name = "Azulweb"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "azulero @ git+https://github.com/kabasset/azulero.git@develop",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.22",
    "pyvips>=3.1.1",
    "uvicorn>=0.42.0",
    "websocket>=0.2.1",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

# ----------- RUFF -------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # erreurs Python
    "F",  # bugs probables
    "I",  # imports triés
    "UP", # modernisation Python
]
ignore = []

[tool.ruff.format]
quote-style = "double"


# ----------- MYPY -----------
[tool.mypy]
ignore_missing_imports = true
disallow_untyped_decorators = false
allow_untyped_globals = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "pydantic"
ignore_errors = true