[project]
name = "Azulweb"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "azulero @ git+https://github.com/kabasset/azulero.git@develop",
    "eummy>=1.3.2",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.22",
    "pyvips>=3.1.1",
    "types-pyyaml>=6.0.12.20260408",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff",
    "mypy",
    "pre-commit",
]

# ----------- RUFF -------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # erreurs Python
    "F",  # bugs probables
    "I",  # imports triés
    "UP", # modernisation Python
]
ignore = []

[tool.ruff.format]
quote-style = "double"


# ----------- MYPY -----------
[tool.mypy]
ignore_missing_imports = true
disallow_untyped_decorators = false
allow_untyped_globals = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "pydantic"
ignore_errors = true

# ----------- PYTEST ---------
[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "frontend/*",
    "venv/*",
    ".venv/*",
]
